Added command line interface and ast dumping

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,10 @@
 			"type": "cppvsdbg",
 			"request": "launch",
 			"program": "${workspaceFolder}/target/debug/functional.exe",
-			"args": [],
+			"args": [
+				"dump_ast",
+				"test.fpl"
+			],
 			"stopAtEntry": false,
 			"cwd": "${workspaceFolder}",
 			"environment": [],
